--- a/GameLogin/GameLogin.csproj
+++ b/GameLogin/GameLogin.csproj
@@ -180,6 +180,10 @@
     <Compile Include="Migrations\201503310505182_SecondMigration.Designer.cs">
       <DependentUpon>201503310505182_SecondMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503310651360_ThirdMigration.cs" />
+    <Compile Include="Migrations\201503310651360_ThirdMigration.Designer.cs">
+      <DependentUpon>201503310651360_ThirdMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Context\LeagueContext.cs" />
@@ -330,6 +334,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503310505182_SecondMigration.resx">
       <DependentUpon>201503310505182_SecondMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503310651360_ThirdMigration.resx">
+      <DependentUpon>201503310651360_ThirdMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
